# Soldrip

./: .env.example  .gitignore  API_DETAILS.md  CAPTCHA_SOLUTIONS.md  CONNECTION_EXAMPLES.md  Cargo.toml  FOR_DEVELOPER_CAPTCHA.md  INTEGRATION_GUIDE.md  QUESTIONS_FOR_DEVELOPER.md  QUICKSTART.md  README.md  SETUP_2CAPTCHA.md  START_HERE.md  TEST_SINGLE_WALLET.md  TROUBLESHOOTING.md  example_wallets.csv  run.bat  run.sh  test_api.bat  test_api.sh
.claude/: settings.local.json
src/: captcha.rs  main.rs  soldrip.rs  storage.rs  wallet.rs
